fixed layout issue and added semantic elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ a {
 
 
 .benefits {
+    display: inline;
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -88,23 +89,30 @@ a {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* condense all of these for the h3 and img like below */
+.benefit-lead,
+.benefit-brand,
+.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+.benefit-lead h3,
+.benefit-brand h3,
+.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img {
+.benefit-lead img,
+.benefit-brand img,
+.benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand {
+/* .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -134,7 +142,7 @@ a {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+} */
 
 .search-engine-optimization {
     margin-bottom: 20px;
